# otp-bar

./: .gitignore  MIGRATION.md  README.md  example.config.toml  index.html  install-cli.sh  install.sh  mise.toml  package-lock.json  package.json  pnpm-lock.yaml
.github/: copilot-instructions.md
.github/workflows/: build.yaml
example.config/: README.md  config.json  config.toml
src/: command.ts  config.ts  main.ts  otp.ts  otpTimer.ts  parseQR.ts  parseUrl.d.ts  parseUrl.js  styles.css  tray.ts  userTray.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  lib.rs  main.rs  otp.rs  qr.rs
