[package]
name = "otp-bar"
version = "1.0.0"
description = "This simple menu bar app tells you OTP and saves it in the clipboard"
authors = ["8gaU8"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "otp_bar_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon" ] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
totp-lite = "2.0"
data-encoding = "2.5"
image = "0.25"
rqrr = "0.8"
base64 = "0.22"
url = "2.5"
urlencoding = "2.1"
dirs = "5.0"
tokio = { version = "1", features = ["full"] }

